--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,23 +22,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/logoutic"
+        android:layout_width="35dp"
+        android:layout_height="28dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView"
-        app:srcCompat="@drawable/ic_account_settings" />
+        app:srcCompat="@drawable/baseline_logout_24" />
+
 
     <ImageView
         android:id="@+id/cartbtn"
         android:layout_width="30dp"
         android:layout_height="31dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/logoutic"
+        app:layout_constraintEnd_toStartOf="@+id/logoutic"
+        app:layout_constraintTop_toTopOf="@+id/logoutic"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/cart_black" />
 
